--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,11 @@
     <string name="error_data">Error en data</string>
     <string name="text_edit">Editar</string>
     <string name="text_date">Fecha</string>
+    <string name="text_quantity">Cantidad</string>
+    <string name="error_rate">Error al obtener tasa de cambio</string>
+    <string name="text_total_dolar_amount">Total ($) %1$s</string>
+    <string name="symbol_bolivar">Bs.</string>
+    <string name="symbol_dolar">$</string>
 
     <!--Dialogs Common-->
     <string name="title_confirmation_dialog">Confirmar</string>
@@ -80,6 +85,13 @@
 
     <!--Expense-->
     <string name="list_expense_empty">No ha realizado su primera Compra</string>
+    <string name="text_price_init">0,00</string>
+    <string name="text_loading_rate">Cargando tasa de cambio</string>
+    <string name="text_rate">Tasa de cambio (Bs. / $)</string>
+    <string name="text_total_dolar">Total ($)</string>
+    <string name="product_added">Producto ya está en la lista</string>
+    <string name="text_price_item">%1$s x $ %2$s</string>
+    <string name="text_view_details">Ver detalles</string>
 
     <!--Settings -->
     <string name="text_about">Información de la App</string>
