--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="text_total_dolar_amount">Total ($) %1$s</string>
     <string name="symbol_bolivar">Bs.</string>
     <string name="symbol_dolar">$</string>
+    <string name="text_go">Ir</string>
 
     <!--Dialogs Common-->
     <string name="title_confirmation_dialog">Confirmar</string>
@@ -47,6 +48,8 @@
     <string name="text_service">Servicio</string>
     <string name="text_expense">Compra</string>
     <string name="text_customer">Cliente</string>
+    <string name="text_number_expenses">Ha realizado %1$s compras</string>
+    <string name="text_not_expense">No ha realizado compras</string>
 
     <!--Customers-->
     <string name="list_customer_empty">No ha creado su primer Cliente</string>
@@ -91,11 +94,18 @@
     <string name="text_total_dolar">Total ($)</string>
     <string name="product_added">Producto ya está en la lista</string>
     <string name="text_price_item">%1$s x $ %2$s</string>
-    <string name="text_view_details">Ver detalles</string>
+    <string name="text_details">Ver detalles</string>
+    <string name="text_number_items">%1$s ítem(s)</string>
+    <string name="text_rate_view">(Bs. / $) %1$s</string>
 
     <!--Settings -->
     <string name="text_about">Información de la App</string>
     <string name="about_title">Desarrollado por&#8230;</string>
     <string name="version_name">Versión %1$s</string>
+
+    <!-- LoginActivity -->
+    <string name="text_email_user">Correo electrónico</string>
+    <string name="text_password">Contraseña</string>
+    <string name="btn_init_session">Iniciar Sesión</string>
 
 </resources>
